<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginBottom="8dp"
    android:paddingVertical="4dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nombre_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/producto_nombre_placeholder"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Harina" />

        <TextView
            android:id="@+id/tv_precio_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#808080"  tools:text="$1.500" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_restar"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/restar"
        android:textSize="20sp"
        app:cornerRadius="24dp" />

    <TextView
        android:id="@+id/tv_cantidad"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/cantidad_inicial"
        android:textSize="18sp"
        android:textAlignment="center"
        tools:text="5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sumar"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/sumar"
        android:textSize="20sp"
        app:cornerRadius="24dp" />

</LinearLayout>